--- a/style.css
+++ b/style.css
@@ -2,4 +2,32 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+
+
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: rgb(72, 95, 93);
+}
+
+
+figcaption{
+  font-size: small;
+}
+
+#featured-property p{
+  width: 800px;
+  
+  margin: auto;
+  
+}
+
+
+div{
+  width: 25%;
+  text-align: center;
+  background-color: rgb(139, 194, 188);
+  float: left;
 }
